src/index.css
:root {
  /* colors */
  /* Named using https://colornamer.netlify.com/ to avoid: gray, dark-gray-2, darker-gray, etc */
  /* --beige: #e8daa7; */
  --corbeau: #140f23;
  --bleach-white: #e9e1ce;
  --dark-moon: #070b0c;
  --haunted-dreams: #303255;
  --pumpkin-pie: #f09352;

  /* fonts */
  --sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
  --serif: Georgia, Times, sans-serif;

  /* forms */
  --button-height: 36px;
}

html {
  background: var(--haunted-dreams);
  color: var(--bleach-white);
  font: 1em/1.3 var(--sans-serif);
}

body {
  margin: 0;
}

html,
body,
#root {
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6,
dd,
p,
ul {
  margin: 0;
}

h2 {
  font-size: 1.1rem;
  font-weight: normal;
  padding: 2em 5% .5em;
}

ul {
  list-style: none;
  padding: 0;
}

img {
  max-width: 100%;
  vertical-align: bottom;
}

input {
  background: #fff;
  border-radius: 0;
  border: 0;
  height: var(--button-height);
  padding: 0 .7em;
}

input[type='search'] {
  -webkit-appearance: none;
}

button {
  -webkit-appearance: button;
  background: var(--dark-moon);
  border-radius: 0;
  border: 0;
  color: #fff;
  cursor: pointer;
  height: var(--button-height);
  padding: 0 1em;
}

label {
  color: #000;
  display: block;
  font-size: .9rem;
  padding-bottom: .2rem;
}

form {
  background: #ff4800 linear-gradient(319deg, #69c2ff 0%, #fe71ff 50%, #ff4800 100%);
  padding: 1em 0;
  text-align: center;
}

